Fixed markdown not working on iPhone

--- a/templates/_css/style.css
+++ b/templates/_css/style.css
@@ -198,13 +198,13 @@
     overflow: hidden; }
     
   iframe  {
-    width: 350px;
+    width: 300px;
     height: 232px;
   }
   
   object  {
     display: none;
-    width: 350px;
+    width: 300px;
     height: 232px;
   }
 
